fix: modal overflow

--- a/resources/scss/components/Modal/_game-creation-modal.scss
+++ b/resources/scss/components/Modal/_game-creation-modal.scss
@@ -4,5 +4,5 @@
 	flex: 1;
 	width: 100%;
 	height: 100%;
-	margin: space(2);
+	margin-block: space(2);
 }
